--- a/Quiz_Management/Views/Question/AddEditQuestion.cshtml
+++ b/Quiz_Management/Views/Question/AddEditQuestion.cshtml
@@ -12,7 +12,8 @@
                         <li class="breadcrumb-item active">Question Add</li>
                     </ol>
                 </nav>
-                <form>
+                <form asp-controller="Question" asp-action="QuestionSave" method="post">
+					<input asp-for="QuestionID" type="hidden" />
                     <div class="mb-3">
                         <span class="text-danger">*</span>
                         <label class="form-label">Question Text</label>
@@ -23,15 +24,16 @@
                     <div class="mb-3">
                         <span class="text-danger">*</span>
                         <label class="form-label">Question Level</label>
-                        <select asp-for="QuestionLevelID" class="form-select">
-                            <option value="">Select Level</option>
+                        <select asp-for="QuestionLevelID" class="form-select" required>
+                            <option value="">-- Select Level --</option>
                             @foreach (var level in ViewBag.QuestionLevel)
-							{
+                            {
                                 <option value="@level.QuestionLevelID">@level.QuestionLevel</option>
-							})
+                            }
                         </select>
-                        <span asp-validation-for="QuestionLevel" class="text text-danger "></span>
+                        <span asp-validation-for="QuestionLevelID" class="text text-danger"></span>
                     </div>
+
 
                     <div class="mb-3">
                         <span class="text-danger">*</span>
@@ -79,6 +81,13 @@
                         <label class="form-label">Question Marks</label>
                         <input asp-for="QuestionMarks" type="number" class="form-control">
                         <span asp-validation-for="QuestionMarks" class="text text-danger "></span>
+                    </div>
+
+                    <div class="mb-3">
+                        <span class="text-danger">*</span>
+                        <label class="form-label">User ID</label>
+                        <input asp-for="UserID" type="number" class="form-control">
+                        <span asp-validation-for="UserID" class="text text-danger "></span>
                     </div>
 
                     <div class="mb-3">
