--- a/Quiz_Management/Views/Question/QuestionList.cshtml
+++ b/Quiz_Management/Views/Question/QuestionList.cshtml
@@ -61,28 +61,35 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @foreach(DataRow row in Model.Rows){
-                            <td align="center">@row["QuestionID"]</td>
-                            <td>@row["QuestionText"]</td>
-                            <td align="center">@row["QuestionLevel"]</td>
-                            <td>@row["All_in_One"]</td>
-                            <td align="center">@row["CorrectOption"]</td>
-                            <td align="center">@row["QuestionMarks"]</td>
-                            <td align="center">@row["IsActive"]</td>
-                            <td>@row["UserName"]</td>
-                            <td>@row["Created"]</td>
-                            <td>@row["Modified"]</td>
-                            <td>
-                                <a style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1" asp-controller="Question" asp-action="AddEditQuestion" asp-route-QuestionID="@row["QuestionID"]">
-                                    <i class="bi bi-pencil"></i> Edit
-                                </a>
-                                <form method="post" asp-controller="Question" asp-action="DeleteQuestion" onsubmit="return confirmDelete()">
-                                    <input type="hidden" name="QuestionID" value="@row["QuestionID"]" />
-                                    <button style="width:100px" type="submit" class="btn btn-outline-danger btn-xs mt-1">
-                                        <i class=" bi bi-trash3"> Delete</i>
-                                    </button>
-                                </form>
-                            </td>
+                            @{
+								int i = 1;
+                                foreach (DataRow row in Model.Rows)
+                                {
+                                    <tr>
+                                        <td align="center">@i</td>
+                                        <td>@row["QuestionText"]</td>
+                                        <td align="center">@row["QuestionLevel"]</td>
+                                        <td>@row["All_in_One"]</td>
+                                        <td align="center">@row["CorrectOption"]</td>
+                                        <td align="center">@row["QuestionMarks"]</td>
+                                        <td align="center">@row["IsActive"]</td>
+                                        <td>@row["UserName"]</td>
+                                        <td>@row["Created"]</td>
+                                        <td>@row["Modified"]</td>
+                                        <td>
+                                            <a style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1" asp-controller="Question" asp-action="AddEditQuestion" asp-route-QuestionID="@row["QuestionID"]">
+                                                <i class="bi bi-pencil"></i> Edit
+                                            </a>
+                                            <form method="post" asp-controller="Question" asp-action="QuestionDelete" onsubmit="return confirmDelete()">
+                                                <input type="hidden" name="QuestionID" value="@row["QuestionID"]" />
+                                                <button style="width:100px" type="submit" class="btn btn-outline-danger btn-xs mt-1">
+                                                    <i class=" bi bi-trash3"> Delete</i>
+                                                </button>
+                                            </form>
+                                        </td>
+                                    </tr>
+									i++;
+                                }
                             }
                         </tbody>
                     </table>
@@ -113,3 +120,30 @@
         return confirm("Are you Sure! You want to Delete this record from Question-table?")
     }
 </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
