--- a/Quiz_Management/Views/QuestionLevel/QuestionLevelList.cshtml
+++ b/Quiz_Management/Views/QuestionLevel/QuestionLevelList.cshtml
@@ -48,26 +48,30 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @foreach (DataRow row in Model.Rows)
-                            {
-                                <tr>
-                                    <td>@row["QuestionLevelID"]</td>
-                                    <td>@row["QuestionLevel"]</td>
-                                    <td>@row["UserName"]</td>
-                                    <td>@row["Created"]</td>
-                                    <td>@row["Modified"]</td>
-                                    <td>
-                                        <a style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1" asp-controller="QuestionLevel" asp-action="AddEditQuestionLevel" asp-route-QuestionLevelID="@row["QuestionLevelID"]">
-                                            <i class="bi bi-pencil"></i> Edit
-                                        </a>
-                                        <form method="post" asp-controller="QuestionLevel" asp-action="DeleteQuestionLevel" onsubmit="return confirmDelete()">
-                                            <input type="hidden" name="QuestionLevelID" value="@row["QuestionLevelID"]" />
-                                            <button style="width:100px" type="submit" class="btn btn-outline-danger btn-xs mt-1">
-                                                <i class=" bi bi-trash3"> Delete</i>
-                                            </button>
-                                        </form>
-                                    </td>
-                                </tr>
+                            @{
+                                int i = 1;
+                                foreach (DataRow row in Model.Rows)
+                                {
+                                    <tr>
+                                        <td>@i</td>
+                                        <td>@row["QuestionLevel"]</td>
+                                        <td>@row["UserName"]</td>
+                                        <td>@row["Created"]</td>
+                                        <td>@row["Modified"]</td>
+                                        <td>
+                                            <a style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1" asp-controller="QuestionLevel" asp-action="AddEditQuestionLevel" asp-route-QuestionLevelID="@row["QuestionLevelID"]">
+                                                <i class="bi bi-pencil"></i> Edit
+                                            </a>
+                                            <form method="post" asp-controller="QuestionLevel" asp-action="DeleteQuestionLevel" onsubmit="return confirmDelete()">
+                                                <input type="hidden" name="QuestionLevelID" value="@row["QuestionLevelID"]" />
+                                                <button style="width:100px" type="submit" class="btn btn-outline-danger btn-xs mt-1">
+                                                    <i class=" bi bi-trash3"> Delete</i>
+                                                </button>
+                                            </form>
+                                        </td>
+                                    </tr>
+									i++;
+                                }
                             }
                         </tbody>
                     </table>
