--- a/Quiz_Management/Views/Shared/_Layout.cshtml
+++ b/Quiz_Management/Views/Shared/_Layout.cshtml
@@ -339,7 +339,7 @@
                         </a>
                     </li>
                     <li>
-                        <a asp-area="" asp-controller="QuizWiseQuestion" asp-action="AddQuizWiseQuestion">
+                        <a asp-area="" asp-controller="QuizWiseQuestion" asp-action="AddEditQuizWiseQuestion">
                             <i class="bi bi-circle"></i><span>Add Quiz Wise Question</span>
                         </a>
                     </li>
@@ -364,7 +364,10 @@
                 </ul>
             </li><!-- End User Nav -->
 
-
+            <a class="nav-link collapsed" asp-controller="User" asp-action="UserRegister">
+                <i class="bi bi-grid"></i>
+                <span>Register</span>
+            </a>
 
             <!-- <li class="nav-heading">Pages</li>
 
