--- a/Quiz_Management/Views/QuizWiseQuestion/QuizWiseQuestionList.cshtml
+++ b/Quiz_Management/Views/QuizWiseQuestion/QuizWiseQuestionList.cshtml
@@ -31,7 +31,7 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center my-3">
                     <div>
-                        <a class="btn btn-primary btn-sm px-4 py-2" asp-controller="QuizWiseQuestion" asp-action="AddQuizWiseQuestion">+ Add Quiz wise Question</a>
+                        <a class="btn btn-primary btn-sm px-4 py-2" asp-controller="QuizWiseQuestion" asp-action="AddEditQuizWiseQuestion">+ Add Quiz wise Question</a>
                     </div>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
@@ -42,8 +42,8 @@
                     <table class="table table-striped table-hover">
                         <thead>
                             <tr>
-                                <th>QuizWiseQuestions ID</th>                                <th>Quiz Name</th>
-                                <th>Question ID</th>
+                                <th>QuizWiseQuestions ID</th>                                
+                                <th>Quiz Name</th>
                                 <th>Question Text</th>
                                 <th>User Name</th>
                                 <th>Created</th>
@@ -59,18 +59,20 @@
                                     <tr>
                                         <td>@i</td>
                                         <td>@row["QuizName"]</td>
-                                        <td>@row["QuestionID"]</td>
                                         <td>@row["QuestionText"]</td>
                                         <td>@row["UserName"]</td>
                                         <td>@row["Created"]</td>
                                         <td>@row["Modified"]</td>
                                         <td>
-                                            <button style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1">
+                                            <a style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1" asp-controller="QuizWiseQuestion" asp-action="AddEditQuizWiseQuestion" asp-route-QuizWiseQuestionsID="@row["QuizWiseQuestionsID"]">
                                                 <i class="bi bi-pencil"></i> Edit
-                                            </button>
-                                            <button style="width:100px" class="btn btn-sm btn-outline-danger mt-1">
-                                                <i class="bi bi-trash"></i> Delete
-                                            </button>
+                                            </a>
+                                            <form method="post" asp-controller="QuizWiseQuestion" asp-action="QuizWiseQuestionDelete" onsubmit="return confirmDelete()">
+                                                <input type="hidden" name="QuizWiseQuestionsID" value="@row["QuizWiseQuestionsID"]" />
+                                                <button style="width:100px" type="submit" class="btn btn-outline-danger btn-xs mt-1">
+                                                    <i class=" bi bi-trash3"> Delete</i>
+                                                </button>
+                                            </form>
                                         </td>
                                     </tr>
 									i++;
