--- a/Quiz_Management/Views/Question/AddEditQuestion.cshtml
+++ b/Quiz_Management/Views/Question/AddEditQuestion.cshtml
@@ -13,7 +13,7 @@
                     </ol>
                 </nav>
                 <form asp-controller="Question" asp-action="QuestionSave" method="post">
-					<input asp-for="QuestionID" type="hidden" />
+                    <input asp-for="QuestionID" type="hidden" />
                     <div class="mb-3">
                         <span class="text-danger">*</span>
                         <label class="form-label">Question Text</label>
@@ -79,14 +79,14 @@
                     <div class="mb-3">
                         <span class="text-danger">*</span>
                         <label class="form-label">Question Marks</label>
-                        <input asp-for="QuestionMarks" type="number" class="form-control">
+                        <input value="" asp-for="QuestionMarks" type="number" class="form-control">
                         <span asp-validation-for="QuestionMarks" class="text text-danger "></span>
                     </div>
 
                     <div class="mb-3">
                         <span class="text-danger">*</span>
                         <label class="form-label">User ID</label>
-                        <input asp-for="UserID" type="number" class="form-control">
+                        <input value="" asp-for="UserID" type="number" class="form-control">
                         <span asp-validation-for="UserID" class="text text-danger "></span>
                     </div>
 
@@ -98,7 +98,6 @@
                     </div>
 
                     <button type="submit" class="btn btn-success me-2">Save</button>
-                    <button type="button" class="btn btn-danger">Reset</button>
                     <a class="btn btn-warning ms-1" asp-controller="Question" asp-action="QuestionList">
                         Back
                     </a>
