--- a/Quiz_Management/Views/Quiz/QuizAddEdit.cshtml
+++ b/Quiz_Management/Views/Quiz/QuizAddEdit.cshtml
@@ -24,27 +24,26 @@
                     <div class="mb-3">
                         <span class="text-danger">*</span>
                         <label class="form-label">Total Questions</label>
-                        <input asp-for="TotalQuestions" class="form-control">
+                        <input value="" asp-for="TotalQuestions" class="form-control">
                         <span asp-validation-for="TotalQuestions" class="text text-danger "></span>
                     </div>
 
                     <div class="mb-3">
                         <span class="text-danger">*</span>
                         <label class="form-label">Quiz Date</label>
-                        <input asp-for="QuizDate" class="form-control">
+                        <input value="" asp-for="QuizDate" class="form-control">
                         <span asp-validation-for="QuizDate" class="text text-danger "></span>
                     </div>
 
                     <div class="mb-3">
                         <span class="text-danger">*</span>
                         <label class="form-label">User ID</label>
-                        <input asp-for="UserID" class="form-control">
+                        <input value="" asp-for="UserID" class="form-control">
                         <span asp-validation-for="UserID" class="text text-danger "></span>
                     </div>
 
                     <div class="mt-4">
                         <button type="submit" class="btn btn-success me-2">Save</button>
-                        <button type="button" class="btn btn-danger">Reset</button>
                         <a class="btn btn-warning ms-1" asp-controller="Quiz" asp-action="QuizList">
                             Back
                         </a>
