--- a/Quiz_Management/Views/QuizWiseQuestion/AddEditQuizWiseQuestion.cshtml
+++ b/Quiz_Management/Views/QuizWiseQuestion/AddEditQuizWiseQuestion.cshtml
@@ -43,11 +43,11 @@
                     <div class="mb-3">
                         <span class="text-danger">*</span>
                         <label for="userId" class="form-label">User ID</label>
-                        <input asp-for="UserID" class="form-control">
+                        <input value="" asp-for="UserID" class="form-control">
+                        <span asp-validation-for="UserID" class="text text-danger"></span>
                     </div>
 
                     <button type="submit" class="btn btn-success me-2">Save</button>
-                    <button type="button" class="btn btn-danger">Reset</button>
                     <a class="btn btn-warning ms-1" asp-controller="QuizWiseQuestion" asp-action="QuizWiseQuestionList">
                         Back
                     </a>
