final commit for submittion

--- a/Quiz_Management/Views/Question/AddEditQuestion.cshtml
+++ b/Quiz_Management/Views/Question/AddEditQuestion.cshtml
@@ -79,7 +79,7 @@
                     <div class="mb-3">
                         <span class="text-danger">*</span>
                         <label class="form-label">Question Marks</label>
-                        <input value="" asp-for="QuestionMarks" type="number" class="form-control">
+                        <input asp-for="QuestionMarks" type="number" class="form-control">
                         <span asp-validation-for="QuestionMarks" class="text text-danger "></span>
                     </div>
 
