--- a/Quiz_Management/Views/QuestionLevel/QuestionLevelList.cshtml
+++ b/Quiz_Management/Views/QuestionLevel/QuestionLevelList.cshtml
@@ -30,13 +30,10 @@
                     <div>
                         <a class="btn btn-primary btn-sm px-4 py-2" asp-controller="QuestionLevel" asp-action="AddEditQuestionLevel">+ Add Question Level</a>
                     </div>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
-                    </form>
                 </div>
 
                 <div class="table-responsive">
-                    <table class="table table-striped table-hover">
+                    <table class="table table-striped table-hover datatable">
                         <thead>
                             <tr>
                                 <th>Level ID</th>
@@ -75,23 +72,6 @@
                             }
                         </tbody>
                     </table>
-                </div>
-
-                <div class="d-flex justify-content-between align-items-center">
-                    <div>Showing 1 to 2 of 2 entries</div>
-                    <nav>
-                        <ul class="pagination mb-0">
-                            <li class="page-item disabled">
-                                <a class="page-link" href="#">Previous</a>
-                            </li>
-                            <li class="page-item active">
-                                <a class="page-link" href="#">1</a>
-                            </li>
-                            <li class="page-item disabled">
-                                <a class="page-link" href="#">Next</a>
-                            </li>
-                        </ul>
-                    </nav>
                 </div>
             </div>
         </div>
